tests/fail/pipeline/imported_global_namespace/UI.kira
annotation State {
}


construct Widget {
    annotations {
        @State;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card(title: String) {
    @State
    let selected: Int = 0;

    content {
        "Card"
    }

    onAppear() {
        return;
    }
}
